# 3D-modeling-v1.0

./: .env.example  .gitignore  README.md  app.py  config.py  convert_to_glb.py  creator.html  generate_3d.py  generate_3d_free.py  index.html  main.js  pipeline.py  pyproject.toml  requirements.txt  run.bat  run_cafe.bat  server.py  style.css
static/: gallery.html  index.html
